--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>專案儀表板</h1>
+        <h1>個股投資分析</h1>
     </header>
     <main id="project-container" class="container">
         <!-- 專案卡片將由 JavaScript 動態插入此處 -->
