Add Goertek financial analysis report and assets
Added a comprehensive financial analysis report for Goertek (002241) covering 2023-2025, including index.html, supporting images, and main.js. The report features company overview, financial data, profitability, industry comparison, and investment advice, with visual charts and professional styling.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="category-container">
     <button class="category-btn active" data-category="all">全部</button>
     <button class="category-btn" data-category="semiconductor">半導體</button>
+	<button class="category-btn" data-category="AI">AI</button>
     <button class="category-btn" data-category="robot">機器人</button>
     <button class="category-btn" data-category="pharmaceutical">醫藥</button>
     <button class="category-btn" data-category="new-energy">新能源</button>
