Add rare earth analysis page and images
Added new directory 000831 with index.html and supporting images for rare earth industry and financial analysis. Includes financial data, company overview, industry chain, and visual assets for 000831.SZ investment evaluation.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button class="category-btn" data-category="pharmaceutical">醫藥</button>
     <button class="category-btn" data-category="new-energy">新能源</button>
     <button class="category-btn" data-category="chemical">化工</button>
+	<button class="category-btn" data-category="RE">稀土、新材料</button>
 </div>
     <main id="project-container" class="container">
         <!-- 專案卡片將由 JavaScript 動態插入此處 -->
